feat: implement new landing page version 6 with updated sections and i18n support.

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -545,6 +545,138 @@
     "pleaseWait": "Это займёт около 30 секунд"
   },
   "landing": {
+    "v6": {
+      "hero": {
+        "badge": "V6.0 Live",
+        "titlePrefix": "ОС для",
+        "titleHighlight": "",
+        "titleSuffix": "твоего",
+        "titleBrand": "Микро-Бренда.",
+        "description": "Больше, чем просто ссылка в биографии. Полноценная операционная система для создания, продажи и роста прямо с телефона. Никакого кода, только поток.",
+        "ctaPrimary": "Создать бесплатно",
+        "ctaSecondary": "Смотреть функции",
+        "noCard": "Без кредитной карты",
+        "cancelAnytime": "Отмена в любое время",
+        "cardRevenue": {
+          "label": "Выручка",
+          "value": "₸12,450"
+        },
+        "cardLead": {
+          "title": "Новый лид!",
+          "subtitle": "Только что через LinkMAX"
+        }
+      },
+      "features": {
+        "title": "Всё что нужно.",
+        "subtitle": "И ничего лишнего.",
+        "description": "Полный набор инструментов для микробизнеса в красивом швейцарском стиле.",
+        "mobileBuilder": {
+          "title": "Мобильный конструктор",
+          "desc": "Создан для поколения смартфонов. Редактируй, просматривай и публикуй прямо с телефона."
+        },
+        "analytics": {
+          "title": "Live-аналитика",
+          "desc": "Отслеживай клики, просмотры и конверсии с встроенной аналитикой, уважающей приватность."
+        },
+        "domain": {
+          "title": "Свой домен",
+          "desc": "Подключи свой домен .com или .kz для профессионального брендинга."
+        },
+        "seo": {
+          "title": "Мгновенное SEO",
+          "desc": "AI-генерируемые мета-теги и разметка schema для идеальной индексации в поиске."
+        },
+        "blocks": {
+          "title": "28+ Умных блоков",
+          "desc": "От простых ссылок до сложных форм и систем бронирования."
+        },
+        "payments": {
+          "title": "Приём платежей",
+          "desc": "Принимай оплату откуда угодно через Stripe, Kaspi или Crypto."
+        }
+      },
+      "pricing": {
+        "title": "Простые, прозрачные цены.",
+        "subtitle": "Начни бесплатно, расти с Pro. Никаких скрытых комиссий.",
+        "free": {
+          "title": "Бесплатный",
+          "desc": "Идеально для старта",
+          "cta": "Начать",
+          "features": [
+            "Безлимитные ссылки",
+            "Базовая аналитика",
+            "Кастомные темы",
+            "Генератор QR-кодов",
+            "Иконки соцсетей"
+          ]
+        },
+        "pro": {
+          "title": "Pro",
+          "desc": "Для серьёзных авторов",
+          "badge": "ПОПУЛЯРНЫЙ",
+          "cta": "Обновить до Pro",
+          "features": [
+            "Всё из Бесплатного",
+            "Расширенная аналитика",
+            "Убрать брендинг",
+            "Свой домен",
+            "Приоритетная поддержка",
+            "AI генерация контента"
+          ]
+        }
+      },
+      "steps": {
+        "title": "От идеи до запуска за минуты",
+        "subtitle": "Мы убрали всю сложность. Вы фокусируетесь на контенте, мы берём на себя остальное.",
+        "step1": {
+          "title": "1. Создай аккаунт",
+          "desc": "Регистрация за секунды через email или Google. Кредитная карта не нужна."
+        },
+        "step2": {
+          "title": "2. Настрой",
+          "desc": "Выбери шаблон, добавь свои ссылки и настрой стиль под свой бренд."
+        },
+        "step3": {
+          "title": "3. Запусти",
+          "desc": "Опубликуй страницу и поделись ссылкой в био. Начни отслеживать визиты мгновенно."
+        }
+      },
+      "faq": {
+        "title": "Частые вопросы",
+        "subtitle": "Всё, что нужно знать о платформе",
+        "items": [
+          {
+            "question": "Что такое lnkmx и кому он подходит?",
+            "answer": "lnkmx — это операционная система для микробизнеса. Она идеально подходит для экспертов, фрилансеров и малого бизнеса, которым нужен быстрый сайт, встроенная CRM для заявок и простая аналитика без сложных настроек."
+          },
+          {
+            "question": "Нужно ли знать программирование?",
+            "answer": "Нет, lnkmx — это no-code платформа. Вы собираете сайт из готовых блоков, как конструктор Lego. А встроенный AI-помощник может написать тексты за вас."
+          },
+          {
+            "question": "Можно ли принимать оплаты в тенге?",
+            "answer": "Да, платформа полностью адаптирована для рынка Казахстана. Вы можете указывать цены в KZT, а интеграции с локальными платежными системами находятся в активной разработке."
+          },
+          {
+            "question": "Помогает ли сайт на lnkmx продвижению в Google (SEO)?",
+            "answer": "Абсолютно. Все страницы на lnkmx автоматически оптимизированы для поисковиков: быстрая загрузка, адаптивность под мобильные устройства и правильная семантическая разметка (Schema.org), что критически важно для SEO в 2025 году."
+          },
+          {
+            "question": "Есть ли бесплатный тариф?",
+            "answer": "Да, у нас есть вечный бесплатный тариф с базовыми функциями. Вы можете создать страницу и начать принимать заявки без вложений."
+          }
+        ]
+      },
+      "cta": {
+        "badge": "Готов к запуску?",
+        "titlePrefix": "Создай свой микро-сайт",
+        "titleSuffix": "бесплатно сегодня.",
+        "description": "Присоединяйся к тысячам креаторов, экспертов и малых бизнесов, растущих с lnkmx. Без кредитной карты.",
+        "primary": "Начать бесплатно",
+        "secondary": "Смотреть примеры",
+        "note": "Вечно бесплатный план • Отмена в любое время • 24/7 Поддержка"
+      }
+    },
     "gallery": {
       "badge": "Сообщество",
       "title": "Изучайте страницы сообщества",
