feat: Implement comprehensive authentication with email, social, and Telegram recovery, alongside new SEO entity linking and block utilities.

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -187,15 +187,6 @@
       "bio": "О себе"
     }
   },
-  "errors": {
-    "pageNotFound": "Страница не найдена",
-    "invalidLink": "Проверьте правильность ссылки или страница была удалена",
-    "loadError": "Ошибка загрузки",
-    "tryAgain": "Попробуйте обновить страницу",
-    "createYourPage": "Хотите создать свою страницу?",
-    "invalidEmail": "Введите корректный email",
-    "subscription": "Ошибка подписки"
-  },
   "form": {
     "fillRequired": "Заполните обязательные поля",
     "success": "Форма успешно отправлена!",
@@ -893,67 +884,6 @@
       "benefit6": "Мобильный редактор",
       "keywords": "Ключевые слова: страница ссылок, линк в био, link in bio, мультиссылка, linktree альтернатива, taplink аналог, мини-лендинг"
     },
-    "faq": {
-      "badge": "Вопросы и ответы",
-      "title": "Часто задаваемые вопросы.",
-      "subtitle": "Ответы на популярные вопросы о LinkMAX",
-      "q1": {
-        "question": "Что такое LinkMAX и для чего он нужен?",
-        "answer": "lnkmx - это AI-конструктор link in bio и мини-сайтов, который помогает собрать одну понятную страницу для ссылок, услуг, записи и заявок."
-      },
-      "q2": {
-        "question": "Сколько стоит использование LinkMAX?",
-        "answer": "Базовый тариф бесплатен навсегда. Pro: 3 мес - 4 350 ₸/мес, 6 мес - 3 698 ₸/мес (-15%), 12 мес - 3 045 ₸/мес (-30%). Оплата онлайн, возврат в течение 14 дней."
-      },
-      "q3": {
-        "question": "Как работает AI-генерация страницы?",
-        "answer": "Выберите нишу и напишите несколько фактов о себе - AI соберёт структуру, тексты и CTA за пару минут. В бесплатном плане 1 генерация/мес, в Pro - 5 генераций/мес."
-      },
-      "q4": {
-        "question": "Какие блоки доступны для страницы?",
-        "answer": "20+ типов блоков: профиль, ссылки, кнопки, изображения, видео, карусели, товары, прайс-листы, формы, карты, мессенджеры, отзывы, FAQ, таймеры и другое."
-      },
-      "q5": {
-        "question": "Есть ли CRM и аналитика?",
-        "answer": "Да. В Pro есть CRM для лидов и Telegram-уведомления. Аналитика показывает клики, источники трафика и поведение посетителей."
-      },
-      "q6": {
-        "question": "Поддерживается ли мобильный редактор?",
-        "answer": "Да! LinkMAX создан с упором на мобильные устройства. Вы можете полноценно редактировать страницу прямо со смартфона."
-      },
-      "q7": {
-        "question": "Какие интеграции поддерживает LinkMAX?",
-        "answer": "Telegram для уведомлений о лидах и Google Календарь для расписания. Соцсети и мессенджеры доступны как блоки."
-      },
-      "q8": {
-        "question": "Берёт ли LinkMAX комиссию с продаж?",
-        "answer": "Нет. 0% комиссии с ваших продаж - вы платите только за подписку."
-      },
-      "q9": {
-        "question": "Как оплатить Premium подписку?",
-        "answer": "Оплата картой и через доступные платёжные методы. Также можно использовать токены (100 токенов = 1 день Pro)."
-      },
-      "q10": {
-        "question": "Какие условия возврата средств?",
-        "answer": "Возврат возможен в течение 14 дней с момента оплаты согласно законодательству РК. Подробнее в пользовательском соглашении."
-      },
-      "q11": {
-        "question": "Можно ли посмотреть примеры страниц?",
-        "answer": "Да. В галерее - реальные страницы из разных ниш: специалисты, магазины, сервисы и креаторы."
-      },
-      "q12": {
-        "question": "Чем LinkMAX лучше Linktree и Taplink?",
-        "answer": "В lnkmx есть AI-сборка страницы, CRM и уведомления без переплаты. Плюс гибкие блоки, понятные тарифы и локальные языки."
-      },
-      "q13": {
-        "question": "Подходит ли lnkmx для магазина или сервиса?",
-        "answer": "Да. Можно добавить каталог, прайс, формы заявок и кнопки связи, чтобы клиент быстро оформил заказ или запись."
-      },
-      "q14": {
-        "question": "Можно ли подключить свой домен?",
-        "answer": "Да, в Pro доступны собственные домены и брендирование страницы."
-      }
-    },
     "nav": {
       "signIn": "Войти",
       "getStarted": "Создать",
@@ -962,9 +892,6 @@
     },
     "floatingCta": {
       "create": "Создать"
-    },
-    "footer": {
-      "alternatives": "Сравнение"
     },
     "hero": {
       "badge": "AI-конструктор мини-сайтов",
@@ -1644,51 +1571,6 @@
       "description": "Войдите, чтобы создать и опубликовать страницу link in bio."
     }
   },
-  "pricing": {
-    "title": "Тарифы",
-    "subtitle": "Выберите подходящий план",
-    "month": "мес",
-    "tokens": {
-      "title": "Или платите Linkkon токенами",
-      "balanceDescription": "100 Linkkon = 1 день Premium. Ваш баланс: {{balance}} токенов",
-      "converting": "Конвертация...",
-      "buyDay": "Купить 1 день за {{cost}} Linkkon",
-      "buyTokens": "Купить токены"
-    },
-    "companyDetails": {
-      "nameLine": "ИП BEEGIN • БИН: 971207300019",
-      "addressLine": "г. Алматы, ул. Шолохова, д. 20/7"
-    },
-    "free": {
-      "title": "Free",
-      "description": "Для начала",
-      "price": "0₸",
-      "period": "навсегда"
-    },
-    "pro": {
-      "title": "Pro",
-      "description": "Для роста",
-      "popular": "Популярный"
-    },
-    "features": {
-      "blocks": "блоков",
-      "aiGenerations": "AI генераций/мес",
-      "crm": "Мини-CRM",
-      "telegram": "Telegram уведомления",
-      "analytics": "Расширенная аналитика",
-      "noWatermark": "Без водяного знака",
-      "themes": "Премиум темы"
-    },
-    "choosePlan": "Выбрать план",
-    "description": "Разблокируйте все возможности LinkMAX для вашего бизнеса",
-    "alreadyFree": "Бесплатный тариф уже активен",
-    "comingSoon": "Оплата скоро будет доступна. Следите за обновлениями.",
-    "currentPlan": "Текущий план",
-    "seo": {
-      "title": "Тарифы lnkmx - link in bio и мини-сайты",
-      "description": "Сравните бесплатный и Pro‑тарифы lnkmx: AI‑генерация, CRM, аналитика и брендирование."
-    }
-  },
   "gallery": {
     "title": "Галерея страниц",
     "subtitle": "Вдохновляйтесь страницами наших пользователей",
@@ -1726,7 +1608,12 @@
     "general": "Произошла ошибка",
     "notFound": "Страница не найдена",
     "pageNotFound": "Страница не найдена",
-    "invalidLink": "Неверная или повреждённая ссылка",
+    "invalidLink": "Проверьте правильность ссылки или страница была удалена",
+    "loadError": "Ошибка загрузки",
+    "tryAgain": "Попробуйте обновить страницу",
+    "createYourPage": "Хотите создать свою страницу?",
+    "invalidEmail": "Введите корректный email",
+    "subscription": "Ошибка подписки",
     "unauthorized": "Необходима авторизация",
     "forbidden": "Доступ запрещён",
     "networkError": "Ошибка сети"
